# sam-framework

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  sam-start.sh  sam-stop.sh
docs/: architecture.md  sam_mvp_build_plan.html  sparse_api_monolith_product_concept.html
docs/examples/: config.yaml.example  profiles.yaml.example
monograph/: CLAUDE.md  pyproject.toml
monograph/monograph/: __init__.py  __main__.py  analyzer.py  cache.py  cli.py  cochange.py  graph.py  impact.py  resolver.py  server.py
monograph/monograph/parsers/: __init__.py  base.py  csharp.py  golang.py  java.py  python.py  typescript.py
monograph/tests/: test_cochange.py  test_impact.py  test_parsers.py  test_resolver.py
monograph/tests/fixtures/go_project/: go.mod
monograph/tests/fixtures/go_project/apis/checkout/: service.go
monograph/tests/fixtures/go_project/shared/auth/: token.go
monograph/tests/fixtures/py_project/apis/orders/: __init__.py
monograph/tests/fixtures/py_project/shared/auth/: __init__.py
monograph/tests/fixtures/ts_project/apis/sales/src/: service.ts
monograph/tests/fixtures/ts_project/shared/auth/src/: token.ts
monolens/: .eslintrc.json  .vscode-test.mjs  .vscodeignore  CLAUDE.md  esbuild.js  monolens-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
monolens/src/: extension.ts  ghostTreeProvider.ts  graphClient.ts  (+6 more)
monowatch/: CLAUDE.md  go.mod  main.go
sam/: Cargo.toml
sam-core/: Cargo.toml  build.rs  cbindgen.toml
sam-core/src/: error.rs  ffi.rs  finder.rs  git.rs  lib.rs  monograph.rs  output.rs  profile.rs  workspace.rs
(+27 files in other folders)
