[project]
name = "monograph"
version = "0.1.0"
description = "SAM Framework — AI dependency analysis engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "networkx>=3.2.0",
    "gitpython>=3.1.40",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
monograph = "monograph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["monograph"]
